etcd/4.etcd_node_1.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    etcd_node: etcd-cluster-node-1
  name: etcd-cluster-node-1-svc
spec:
  ports:
  - name: etcd-client-port
    port: 2379
    protocol: TCP
    targetPort: 2379
  - name: etcd-server-port
    port: 2380
    protocol: TCP
    targetPort: 2380
  selector:
    etcd_node: etcd-cluster-node-1
